# singlestoredb-python

./: .flake8  .gitignore  .pre-commit-config-py36.yaml  .pre-commit-config.yaml  AC_PLAN.md  AC_PROMPT.md  AC_SPEC.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE.md  accel.c  coverage-mysql.cov  pyproject.toml  requirements-dev.txt  requirements.txt  s4mount.py  setup.cfg  setup.py  stagemount.py  test-requirements.txt
.github/: CODEOWNERS
.github/workflows/: build-pkgs.yml  build.yml  code-check.yml  coverage.yml  fusion-docs.yml  pre-commit.yml  publish-pypi.yml  publish.yml  py3build.yml  run-tests.yml  security_scans.yml  smoke-test.yml
conda.recipe/: bld.bat  build.bat  build.sh  meta.yaml
docs/: .buildinfo  CNAME  Makefile  api.html  api.rst  conf.py  custom.css  genindex.html  getting-started.html  getting-started.rst  index.html  index.rst  install.html  license.html  management-api-audit.md  objects.inv  post-process-html  py-modindex.html  search.html  searchindex.js  whatsnew.html  whatsnew.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  getting-started.html  index.html  install.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  whatsnew.html
docs/_sources/: api.rst.txt  getting-started.rst.txt  index.rst.txt  install.rst.txt  license.rst.txt  whatsnew.rst.txt
docs/_static/: basic.css  custom.css  doctools.js  documentation_options.js  jquery-3.5.1.js  language_data.js  searchtools.js  sphinx_highlight.js  underscore-1.13.1.js
docs/_static/js/: versions.js
docs/adr/: 0001-versioned-management-api-wrappers.md
docs/src/: Makefile  api.rst  conf.py  custom.css  getting-started.rst  index.rst  install.rst  post-process-html  singlestoredb-docker.py  whatsnew.rst
docs/src/_static/: custom.css
examples/: 2_col_aws_client_s2ms.txt  3_col_aws_client_s2ms.txt  3_col_local.txt  arrow_read.py  getting-started.ipynb  test.sql
licenses/: README.md
resources/: build_docs.py  build_wasm.sh  bump_version.py  create_release.py  create_test_cluster.py  drop_db.py  drop_test_cluster.py  gen_fusion_handlers_doc.py  http_api.sql  init_db.py  test.sql
run_personal/: __init__.py  magic.py
run_shared/: __init__.py  magic.py
singlestore/: __init__.py  auth.py  config.py  connection.py  converters.py  dbapi.py  exceptions.py  http.py  manager.py  types.py
singlestore/drivers/: __init__.py  base.py  cymysql.py  enable_cleartext_plugin.cnf  http.py  mariadb.py  mysql_connector.py  mysqlconnector.py  mysqldb.py  pymysql.py  pyodbc.py
singlestore/ibis/: __init__.py  compiler.py  registry.py
singlestore/ibis/tests/: conftest.py
singlestore/management/: __init__.py  cluster.py  manager.py  region.py  utils.py  workspace.py
singlestore/sqlalchemy/: __init__.py  base.py  cymysql.py  http.py  https.py  mysqlconnector.py  mysqldb.py  pymysql.py  reflection.py
singlestore/tests/: basics_test.py  init_db.py  test.sql  test_basics.py  test_config.py  test_connection.py  test_exceptions.py  test_http.py  test_management.py  test_manager.py  test_results.py  test_types.py  test_xdict.py  utils.py
singlestore/utils/: args.py  config.py  results.py  xdict.py
singlestoredb/: __init__.py  auth.py  config.py  connection.py  converters.py  docker.py  exceptions.py  http.py  pytest.py  types.py  vectorstore.py  warnings.py
singlestoredb/ai/: __init__.py  chat.py  debug.py  debugv1.py  debugv2.py  debugv3.py  embeddings.py  utils.py
singlestoredb/alchemy/: __init__.py
singlestoredb/apps/: __init__.py  _cloud_functions.py  _config.py  _connection_info.py  _dashboards.py  _process.py  _python_udfs.py  _stdout_supress.py  _uvicorn_util.py
singlestoredb/clients/pymysqlsv/: __init__.py  _auth.py  accel.c  charset.py  connections.py  converters.py  cursors.py  err.py  optionfile.py  protocol.py
singlestoredb/docstring/: __init__.py  attrdoc.py  common.py  epydoc.py  google.py  numpydoc.py  parser.py  rest.py  util.py
singlestoredb/docstring/tests/: _pydoctor.py  test_epydoc.py  test_google.py  test_numpydoc.py  test_parse_from_object.py  (+3 more)
singlestoredb/drivers/: __init__.py  base.py  cymysql.py  http.py  mariadb.py  mysqlconnector.py  mysqldb.py  pymysql.py  pymysqlsv.py  pyodbc.py
singlestoredb/functions/: __init__.py  decorator.py  dtypes.py  signature.py  sql_types.py  transformers.py  typing.py  utils.py
singlestoredb/fusion/: README.md  __init__.py  api.py  grammar.py  graphql.py  handler.py  parser.py  registry.py  result.py
singlestoredb/http/: __init__.py  connection.py
singlestoredb/ibis_extras/: __init__.py  mixins.py
singlestoredb/magics/: __init__.py  run_personal.py  run_shared.py
singlestoredb/management/: __init__.py  audit_logs.py  billing_usage.py  cluster.py  egress.py  export.py  files.py  inference_api.py  invitations.py  job.py  manager.py  metrics.py  organization.py  private_connections.py  projects.py  region.py  roles.py  storage.py  storage_dr.py  teams.py  users.py  utils.py  versioned.py  workspace.py
singlestoredb/ml/: __init__.py  ml_train.py
singlestoredb/mysql/: __init__.py  _auth.py  accel.c  charset.py  connection.py  converters.py  cursors.py  err.py  optionfile.py  protocol.py  times.py
singlestoredb/notebook/: __init__.py  _objects.py  _portal.py
singlestoredb/server/: docker.py  free_tier.py
singlestoredb/tests/: alltypes.sql  alltypes_no_nulls.sql  conftest.py  local_infile.csv  test.ipynb  test.sql  test2.ipynb  test2.sql  test_9_1.sql  test_basics.py  test_config.py  test_connection.py  test_dbapi.py  test_exceptions.py  test_ext_func.py  test_ext_func_data.py  test_fusion.py  test_http.py  test_management.py  test_plugin.py  test_plugin_integration.py  test_results.py  test_rowdat_1.py  test_types.py  test_typing.py  test_udf.py  test_udf_event_loop.py  test_udf_returns.py  test_vectorstore.py  test_versioned_management.py  test_xdict.py  utils.py
singlestoredb/utils/: _lazy_import.py  config.py  convert_rows.py  debug.py  dtypes.py  events.py  mogrify.py  results.py  xdict.py
sqlx/: __init__.py  magic.py
wit/: plugin.wit  udf.wit
(+103 files in other folders)
