[metadata]
name = singlestoredb
version = 1.12.1
description = Interface to the SingleStoreDB database and workspace management APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/singlestoredb-python
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Database

[options]
packages = find:
install_requires =
    PyJWT
    build
    parsimonious
    requests
    setuptools
    sqlparams
    wheel
    tomli>=1.1.0;python_version < '3.11'
python_requires = >=3.8
include_package_data = True
tests_require =
    coverage
    pytest
    pandas

[options.packages.find]
exclude =
    docs*
    resources*
    examples*
    licenses*

[options.entry_points]
pytest11 =
    singlestoredb = singlestoredb.pytest

[options.extras_require]
dataframe =
    ibis-singlestoredb
dbt =
    dbt-singlestore
docker =
    docker
ed22519 =
    PyNaCl>=1.4.0
gssapi =
    gssapi
ibis =
    ibis-singlestoredb
kerberos =
    gssapi
pytest =
    pytest
rsa =
    cryptography
sqlalchemy =
    sqlalchemy-singlestoredb>=1.0.0

[options.package_data]
* =
    *.typed
    *.sql
    *.csv
    *.ipynb

[tool:pytest]
markers =
    management

[flake8]
exclude =
    docs/*
    resources/*
    licenses/*
max-complexity = 45
max-line-length = 90
per-file-ignores =
    singlestoredb/__init__.py:F401
    singlestoredb/fusion/__init__.py:F401
    singlestoredb/fusion/grammar.py:E501
    singlestoredb/http/__init__.py:F401
    singlestoredb/management/__init__.py:F401
    singlestoredb/mysql/__init__.py:F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
source_pkgs = singlestoredb

[coverage:report]
omit =
    setup.py
    */tests/*
    */docs/*
